# OOP-NSU-Task7

ClassTime-main/: CMakeLists.txt  README.md  main.cpp
ClassTime-main/TimeLib/: CMakeLists.txt  time.cpp  time.hpp
